# libdpf

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  BUGS.md  CHANGES.md  CPPLINT.cfg  Doxyfile  DoxygenLayout.xml  LICENSE.md  Makefile  README.md  SUBMODULES.md  TODO  TODO.md
doc/: Doxyfile  DoxygenLayout.xml  MainPage.dox  OUTPUTS.md  TODO.md  directories.dox  examples.dox  footer.html  header.html  libdpf-wordmark.psd  libdpf.md  libdpf_full.md  namespaces.dox  stylesheet.css
doc/assets/: libdpf.psd
doc/doxygen-custom/: custom.css  header.html
doc/pages/: basics.md  evaluation.md  input_types.md  introduction.md  iterables.md  listings.md  output_types.md
etc/: libdpf.psd
examples/evaluation/: eval_full.cpp  eval_interval.cpp  eval_point.cpp  eval_sequence.cpp  memoizers.cpp
examples/input_types/: bitstring.cpp  integral_types.cpp  keyword.cpp  keyword_int_map.cpp  modint.cpp
examples/iterables/: advice_bit_iterable.cpp
examples/output_types/: integral_types.cpp  wildcard.cpp
include/: dpf.hpp  grotto.hpp
include/dpf/: advice_bit_iterable.hpp  aligned_allocator.hpp  asio.hpp  asio_support.hpp  bit.hpp  bit_array.hpp  bitstring.hpp  dpf_key.hpp  dpf_key_asio.hpp  emplace.hpp  eval.hpp  eval_common.hpp  eval_full.hpp  eval_interval.hpp  eval_point.hpp  eval_sequence.hpp  fixedpoint.hpp  interval_memoizer.hpp  io.hpp  json.hpp  keyword.hpp  leaf_arithmetic.hpp  leaf_node.hpp  leaf_wrapper.hpp  literals.hpp  modint.hpp  network.hpp  offset_wrapper.hpp  output_buffer.hpp  parallel_bit_iterable.hpp  parallel_bit_iterable_helpers.hpp  path_memoizer.hpp  prg.hpp  prg_aes.hpp  prg_aes_x86.hpp  prg_dummy.hpp  prg_nonsecure_just_a_counter.hpp  random.hpp  recipe.hpp  rotated_iterable.hpp  (+13 more)
include/grotto/: fixedpoint.hpp  gadget_hints.hpp  gadgets.hpp  hexfloat.hpp  offset_iterable.hpp  piecewise.hpp  prefix_parity.hpp
include/grotto/gadgets/: activations.hpp  binary.hpp  decimal.hpp  elementary.hpp  exponential.hpp  hyperbolic.hpp  logarithm.hpp  misc.hpp  powers.hpp  quantile.hpp  trigonometric.hpp
rtfm/: EVAL.md  GEN.md  INPUTS.md  ITERATORS.md  MainPage.dox  OUTPUTS.md
test/: CMakeLists.txt  README.md
test/tests/: advice_bit_iterable_test.cpp  all_test.cpp  dpf_key_test.cpp  eval_full_multi_test.cpp  eval_full_test.cpp  eval_interval_multi_test.cpp  eval_interval_test.cpp  eval_point_multi_test.cpp  eval_point_test.cpp  eval_sequence_multi_test.cpp  eval_sequence_test.cpp  parallel_bit_iterable_test.cpp  setbit_index_iterable_test.cpp  type_param_test.cpp  value_param_test.cpp  wildcard_test.cpp
test/tests/helpers/: custom_input_type.hpp  custom_output_type_large.hpp  custom_output_type_large_plus_minus.hpp  custom_output_type_large_xor.hpp  custom_output_type_small.hpp  eval_common_data.hpp  eval_common_multi_data.hpp
(+131 files in other folders)
